--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^8.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
